# happyFDE_SergioIllescas

./: .gitattributes  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5b0bf4f18c50_initial_schema.py  5c3e7a1ff666_add_final_price_tone_is_final_to_.py  d7f13dc18fae_add_warning_column_to_negotiations.py
backend/app/: config.py  main.py  seed.py  sync_carriers.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  call.py  carrier.py  load.py  negotiation.py  quote.py  shipper.py
backend/app/routers/: calls.py  carriers.py  loads.py  metrics.py  quotes.py  shippers.py  webhooks.py
backend/app/routers/agent/: calls.py  carriers.py  loads.py  negotiations.py
backend/app/schemas/: call.py  carrier.py  load.py  quote.py  shipper.py
backend/app/services/: fmcsa.py  load_service.py  metrics.py  negotiation.py
backend/tests/: conftest.py  test_agent_calls.py  test_agent_fmcsa.py  test_agent_loads.py  test_agent_negotiations.py  test_auth.py  test_calls.py  test_carriers.py  test_cleanup.py  test_e2e_agent_flow.py  test_financial_metrics.py  test_health.py  test_loads.py  test_metrics.py  test_models.py  test_seed.py  test_webhooks.py
frontend/: .env.example  Dockerfile  jest.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/__tests__/: LoadCard.test.tsx  (+4 more)
terraform/: database.tf  main.tf  network.tf  outputs.tf  registry.tf  secrets.tf  services.tf  terraform.tfvars.example  variables.tf
(+19 files in other folders)
